<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="회원가입 액티비티"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextInputId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextInputPw"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonSignUpSuccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signupsuccess"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextInputPw"
        app:layout_constraintStart_toStartOf="@+id/editTextInputPw"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputPw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signupcancel"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButtonSignUpSuccess"
        app:layout_constraintStart_toStartOf="@+id/appCompatButtonSignUpSuccess"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButtonSignUpSuccess" />


</androidx.constraintlayout.widget.ConstraintLayout>