<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextInputId"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="아이디"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145" />

        <EditText
            android:id="@+id/editTextInputPw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="비밀번호"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextInputId" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutSimpleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextInputPw">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonSignIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/custom_button_color"
                android:text="@string/signin"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/appCompatButtonSignUp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonSignUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/custom_button_color"
                android:text="@string/signup"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appCompatButtonSignIn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/faceBookLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="페이스북으로 수정할 버튼"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutSimpleLogin"
            app:layout_constraintStart_toStartOf="@+id/constraintLayoutSimpleLogin"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSimpleLogin"
            tools:ignore="NotSibling" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonGuest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/custom_button_color"
            android:text="@string/guest_login"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/faceBookLogin"
            app:layout_constraintStart_toStartOf="@+id/faceBookLogin"
            app:layout_constraintTop_toBottomOf="@+id/faceBookLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>